@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-19T08:10:44Z",
-  "count_outdated" : 20,
-  "uniques_outdated" : 15,
-  "count" : 28,
-  "uniques" : 22,
+  "timestamp" : "2022-05-19T16:27:52Z",
+  "count_outdated" : 22,
+  "uniques_outdated" : 17,
+  "count" : 29,
+  "uniques" : 23,
   "clones" : [
-    {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 5,
