@@ -1,12 +1,7 @@
 {
-  "count": 8,
+  "count": 7,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 5,
