@@ -1,3 +1,10 @@
+2022-05-19T16:27:52Z:
+* notice: last 14d: unq all: 6 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 15 20 / 22 28
+* notice: next accum: outdated-unq outdated-all / unq all: 17 22 / 23 29
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-19T08:10:44Z:
 * notice: last 14d: unq all: 6 8
 * notice: prev accum: outdated-unq outdated-all / unq all: 15 20 / 23 29
